--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "engines": {
-  "node": "6.2.0"
-},
-"scripts": {
-  "start": "node server.js"
-}
+    "node": "6.2.0"
+  },
+  "dependencies": {
+    "express": "4.14.0",
+    "ws": "1.1.1"
+  }
 }
