--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "4.14.0",
+    "fs": "0.0.1-security",
+    "mysql": "2.11.1",
     "ws": "1.1.1"
   }
 }
