--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.14.0",
     "fs": "0.0.1-security",
     "mysql": "2.11.1",
+    "nodemailer": "2.6.4",
     "ws": "1.1.1"
   }
 }
